# belki

./: CMakeLists.txt  README.md  belki.pro  centralhub.cpp  centralhub.h  chart.cpp  chart.h  chartview.cpp  chartview.h  colormap.cpp  colormap.h  datahub.cpp  datahub.h  dataset.cpp  dataset.h  dimred.cpp  dimred.h  distmatscene.cpp  distmatscene.h  distmatview.cpp  distmatview.h  fileformat.txt  fileio.cpp  fileio.h  guistate.cpp  guistate.h  heatmapscene.cpp  heatmapscene.h  heatmapview.cpp  heatmapview.h  help.html  jobregistry.cpp  jobregistry.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  model.h  profilechart.cpp  profilechart.h  (+13 more)
cmake/: FindTBB.cmake  behavior.cmake  dependencies.cmake  flags.cmake  gitversion.cmake
compute/: CMakeLists.txt  annotations.cpp  annotations.h  colors.cpp  colors.h  components.cpp  components.h  dimred.cpp  dimred.h  features.cpp  features.h
distmat/: CMakeLists.txt  distmat.cpp  distmat.h  distmatscene.cpp  distmatscene.h  distmattab.cpp  distmattab.h  distmattab.ui  distmatview.cpp  distmatview.h
featweights/: CMakeLists.txt  featweightsscene.cpp  featweightsscene.h  featweightstab.cpp  featweightstab.h  featweightstab.ui
gfx/: breeze  breeze-subset.qrc  icon.icns  logo.xcf  windows.rc
heatmap/: CMakeLists.txt  heatmapscene.cpp  heatmapscene.h  heatmaptab.cpp  heatmaptab.h  heatmaptab.ui  heatmapview.cpp  heatmapview.h
meanshift/: fams.cpp  fams.h  io.cpp  lsh.cpp  lshreader.cpp  mode_pruning.cpp
profiles/: CMakeLists.txt  bnmschart.cpp  bnmschart.h  bnmsmodel.h  bnmstab.cpp  bnmstab.h  bnmstab.ui  profilechart.cpp  profilechart.h  profiletab.cpp  profiletab.h  profiletab.ui  profilewidget.cpp  profilewidget.h  profilewidget.ui  profilewindow.cpp  profilewindow.h  profilewindow.ui  rangeselectitem.cpp  rangeselectitem.h  referencechart.cpp  referencechart.h
resources/: help.html  icon-monochrome.xcf  icon.xcf  index.qrc  logo.xcf  windows.rc
resources/icons-custom/: index.qrc
resources/icons-stock/: index.qrc
resources/macos/: Info.plist  Info.plist.in
scatterplot/: CMakeLists.txt  chart.cpp  chart.h  chartconfig.h  charttab.cpp  charttab.h  charttab.ui  chartview.cpp  chartview.h  dimredtab.cpp  dimredtab.h  dimredtab.ui  scattertab.cpp  scattertab.h  scattertab.ui
src/: main.cpp
src/compute/: CMakeLists.txt  annotations.cpp  annotations.h  colors.cpp  components.cpp  components.h  dimred.cpp  distmat.cpp  distmat.h  features.cpp  features.h  hierarchy.cpp  hierarchy.h
src/compute/meanshift/: fams.cpp  fams.h  io.cpp  mode_pruning.cpp
src/core/: CMakeLists.txt  datahub.cpp  datahub.h  dataset.cpp  dataset.h  fileio.cpp  fileio.h  guistate.cpp  guistate.h  jobregistry.cpp  jobregistry.h  model.h  proteindb.cpp  viewer.cpp  viewer.h  windowstate.h
src/distmat/: CMakeLists.txt  distmat.cpp  distmat.h  distmatscene.cpp  distmatscene.h  distmattab.cpp  distmattab.h  distmattab.ui
src/featweights/: featweightsscene.cpp  featweightsscene.h  featweightstab.cpp  featweightstab.h  featweightstab.ui
src/heatmap/: CMakeLists.txt  heatmapscene.cpp  heatmapscene.h  heatmaptab.cpp  heatmaptab.h  heatmaptab.ui
src/profiles/: CMakeLists.txt  bnmschart.cpp  bnmschart.h  bnmsmodel.h  bnmstab.cpp  bnmstab.h  bnmstab.ui  plotactions.cpp  plotactions.h  profilechart.cpp  profilechart.h  profiletab.cpp  profiletab.h  profiletab.ui  profilewidget.h  profilewidget.ui  profilewindow.cpp  profilewindow.h  profilewindow.ui  referencechart.cpp
src/scatterplot/: chart.cpp  chart.h  chartview.cpp  chartview.h  dimredtab.cpp  dimredtab.h  dimredtab.ui  scattertab.cpp  scattertab.ui
src/storage/: CMakeLists.txt  deserialize.cpp  parse_dataset.cpp  serialize.cpp  storage.cpp  storage.h
src/widgets/: CMakeLists.txt  famscontrol.cpp  famscontrol.h  famscontrol.ui  graphicsscene.cpp  graphicsscene.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  spawndialog.cpp  spawndialog.ui
storage/: CMakeLists.txt  README.md  deserialize.cpp  miniz.h  parse_dataset.cpp  qzip.h  serialize.cpp  storage.cpp  storage.h  zip_file.hpp
widgets/: CMakeLists.txt  famscontrol.cpp  famscontrol.h  famscontrol.ui  graphicsscene.cpp  graphicsscene.h  graphicsview.cpp  graphicsview.h  jobstatus.cpp  jobstatus.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  profilechart.cpp  profilechart.h  profilewidget.cpp  profilewidget.h  profilewindow.cpp  profilewindow.h  spawndialog.cpp  spawndialog.h  spawndialog.ui
